--- a/frontend/nv-front/src/app/globals.css
+++ b/frontend/nv-front/src/app/globals.css
@@ -18,3 +18,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.scrollable-content {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f1f1f1;
+}
+
+.scrollable-content::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+.scrollable-content::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
