fixed bugs on sidebar

--- a/frontend/nv-front/src/components/modules/auth/styles.css
+++ b/frontend/nv-front/src/components/modules/auth/styles.css
@@ -11,8 +11,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
   background: #000;
+  overflow-y: hidden;
+  position: absolute;
 }
 
 section {
