--- a/backend/nvback/static/css/analytics_page.css
+++ b/backend/nvback/static/css/analytics_page.css
@@ -6,6 +6,7 @@
     background-color: #212121;
     text-align: center;
     margin-right: .5rem;
+    color: white;
 }
 
 .data_div > p:first-child{
