post report feature added

--- a/backend/nvback/templates/admin/index.html
+++ b/backend/nvback/templates/admin/index.html
@@ -76,6 +76,18 @@
             </div>
         </div>
         
+        <div style="margin-bottom: 1rem;">
+            <div style="font-size: larger; font-weight: bold;">
+                Reports:
+            </div>
+            
+            <div>
+                <div class="data_div">
+                    <p>Total Post Report:</p>
+                    <p>{{ report.post_report }}</p>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col-md-6 col-sm-12">
                 {% for app in dashboard_list %}
